--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "crypto": "0.0.3",
     "debug": "^2.3.2",
+    "dotenv": "^2.0.0",
     "download": "^5.0.2",
     "express": "^4.14.0",
     "fs-extra": "^1.0.0",
