--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "adm-zip": "^0.4.7",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
-    "crypto": "0.0.3",
     "debug": "^2.3.2",
     "dotenv": "^2.0.0",
     "download": "^5.0.2",
     "express": "^4.14.0",
     "fs-extra": "^1.0.0",
-    "github": "^6.0.4"
+    "github": "^6.0.4",
+    "glob": "^7.1.1"
   }
 }
